# BeginFastApi

./: README.md  items_vies.py  main.py  pyproject.toml
users/: crud.py  schemas.py  views.py
